--- a/ppms_project/profilingApp/templates/activities/Change Password.html
+++ b/ppms_project/profilingApp/templates/activities/Change Password.html
@@ -19,7 +19,7 @@
 <header>
     <div class="site-header">
     <nav class="navbar fixed-top index__navbar scrolled" 
-    style=" padding-left:3%; padding-right:3%; background-color: rgba(255, 255, 255, 0.803);">
+    style=" padding-left:3%; padding-right:3%; background-color: #ffffffcd;">
         <div class="flex-fill p-1 py-1">
             <div class="d-flex align-items-center justify-content-end">
                 <div id="navLinks">
