--- a/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
@@ -69,12 +69,14 @@
                             <div>
                                 <h5 class="modal-title fas fa-history" id="exampleModalLabel"> Nutritional Status History</h5>
                             </div>
-                            <div >
-                                <button type="button" class="btn" style="background-color: #EF3A25; color: white;" data-bs-dismiss="modal" aria-label="Close"> Close</button>
-                            </div>
                         </div>
                         <div class="modal-body p-0">
                             <div class="table-responsive " style="margin:30px;">
+                                {% if preschooler.suffix_name is None %}
+                                    <h5 class="text-center text-uppercase">{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }}'s Nutritional Status History</h5>
+                                {% else %}
+                                    <h5 class="text-center text-uppercase">{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }} {{ preschooler.suffix_name }}'s Nutritional Status History</h5>
+                                {% endif %}
                                 <table class="table table-hover table-cell-border" id="NutStat_pres_history" >
                                     <thead>
                                         <tr style="text-align: center;">
@@ -158,8 +160,8 @@
                                 </table>
                             </div>
                         </div>
-                        <div class="card-footer text-center ">
-                            <h5 class="text-muted  h4">Preschooler's nutritional status history</h5>
+                        <div class="card-footer text-end ">
+                            <button type="button" class="btn" style="background-color: #EF3A25; color: white;" data-bs-dismiss="modal" aria-label="Close"> Close</button>
                         </div>
                     </div>
                 </div>
