--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -112,15 +112,15 @@
                                 {% csrf_token %}
                                 <div class="md-form mb-2">
                                     <label id="user-lbl" data-error="wrong" data-success="right">First Name: </label>
-                                    <input class="form-control" type="text" name="first_name" id="first_name">
+                                    <input class="form-control" type="text" name="first_name" id="first_name" required>
                                 </div>
                                 <div class="md-form mb-2">
                                     <label id="user-lbl" data-error="wrong" data-success="right">Middle name:</label>
-                                    <input class="form-control" type="text" name="middle_name" id="middle_name">
+                                    <input class="form-control" type="text" name="middle_name" id="middle_name" required>
                                 </div>
                                 <div class="md-form mb-2">
                                     <label id="user-lbl" data-error="wrong" data-success="right">Last name:</label>
-                                    <input class="form-control" type="text" name="last_name" id="last_name">
+                                    <input class="form-control" type="text" name="last_name" id="last_name" required>
                                 </div>
                                 <div class="md-form mb-2">
                                     <label id="user-lbl" data-error="wrong" data-success="right">Suffix:</label>
@@ -128,11 +128,11 @@
                                 </div>
                                 <div class="md-form mb-2">
                                     <label id="user-lbl" data-error="wrong" data-success="right">Birthdate:</label>
-                                    <input class="form-control" type="date" name="birthday" id="birthday">
+                                    <input class="form-control" type="date" name="birthday" id="birthday" required>
                                 </div>
                                 <div class="md-form mb-2">
                                     <label id="user-lbl" data-error="wrong" data-success="right">Gender:</label>
-                                    <select name="gender" class="form-select" aria-label="Default select example">
+                                    <select name="gender" class="form-select" aria-label="Default select example" required>
                                         <option value="Male" selected>Male</option>
                                         <option value="Female">Female</option>
                                     </select>
