--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -44,6 +44,8 @@
        $('[data-toggle="tooltip"]').tooltip()})
        $('[data-toggle="tooltip"]').on('shown.bs.tooltip', function () {
        $('.tooltip').addClass('animated fade');
+       $('[data-toggle="tooltip"]').tooltip({
+        trigger : 'hover'})  
     })
 </script>
     
@@ -59,9 +61,12 @@
                 <div class="col-xl-4  col-md-6 col-12">
                     <div class="row d-flex justify-content-center align-items-stretch">
                         <div class="mb-3 d-flex justify-content-md-end justify-content-center align-items-stretch">
-                            <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#update"><span class="fa fa-user-edit"></span> Update preschooler</button>
-                            <button style="background-color: #188045; color: white; margin-left: 10px;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#history"><span class="fas fa-history"></span> Nutritional Status History</button>
-                            <a href="{% url 'immunization_schedule' preschooler.id %}" style="background-color: #188045; color: white; margin-left:10px; text-align: center;" type="button" class="btn"><span class="fa fa-address-card"></span> Immunization Status</a>
+                            <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#update" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            title="Update Preschooler's Profile"><span class="fa fa-user-edit"></span> Update</button>
+                            <button style="background-color: #188045; color: white; margin-left: 10px;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#history"  data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            title="Preschooler Status History"><span class="fas fa-history"></span> History </button>
+                            <a href="{% url 'immunization_schedule' preschooler.id %}"  data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="5,5"
+                            title="Immunization Status" style="background-color: #188045; color: white; margin-left:10px; text-align: center;" type="button" class="btn"><span class="fa fa-address-card"></span> Immunization</a>
                         </div>
                     </div>
                 </div>
@@ -228,9 +233,9 @@
                                                 <div class="table-responsive " style="margin:30px;">
                                                     <table class="table table-hover table-cell-border" id="NutStat_history" >
                                                         {% if preschooler.suffix_name is None %}
-                                                            <h5 class="text-center">{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }}'s Nutritional Status History</h5>
+                                                            <h5 class="text-center text-uppercase">{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }}'s Nutritional Status History</h5>
                                                         {% else %}
-                                                            <h5 class="text-center">{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }} {{ preschooler.suffix_name }}'s Nutritional Status History</h5>
+                                                            <h5 class="text-center text-uppercase">{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }} {{ preschooler.suffix_name }}'s Nutritional Status History</h5>
                                                         {% endif %}
                                                         
                                                         <thead>
